--- a/Alba.CsCss/Style/Original/nsCSSPropList.tt
+++ b/Alba.CsCss/Style/Original/nsCSSPropList.tt
@@ -60,7 +60,7 @@ namespace Alba.CsCss.Style
         [EditorBrowsable(EditorBrowsableState.Never)]
         COUNT_DUMMY2 = COUNT - 1,
 <#+   foreach (CssPropAlias prop in GetCssPropAliases()) { #>
-        Alias_<#= prop.Id #>,
+        Alias_<#= prop.Method #>,
 <#+   } #>
         COUNT_with_aliases,
         [EditorBrowsable(EditorBrowsableState.Never)]
