nsCSSParser conversion WIP (1715 errors left)

--- a/Alba.CsCss/Style/Original/nsCSSKeywordList.tt
+++ b/Alba.CsCss/Style/Original/nsCSSKeywordList.tt
@@ -45,6 +45,9 @@ namespace Alba.CsCss.Style
 // Generated file. Do not edit manually.
 //
 
+using System.Collections.Generic;
+using Alba.CsCss.Extensions;
+
 namespace Alba.CsCss.Style
 {
     internal partial class nsCSSKeywords
@@ -54,6 +57,8 @@ namespace Alba.CsCss.Style
             "<#=key.Name#>",
 <#+       } #>
         };
+
+        private static readonly Dictionary<string, int> gKeywordTable = kCSSRawKeywords.ToCaseInsensitiveNameTable();
     }
 }
 <#+ } /* void GenerateCssKeywords */ #>
