--- a/Alba.CsCss/Style/Original/nsCSSParser.tt
+++ b/Alba.CsCss/Style/Original/nsCSSParser.tt
@@ -138,7 +138,7 @@ namespace Alba.CsCss.Style
             .Replace(@"nsCSSScanner&", "nsCSSScanner")
             .Replace(@"mozilla::css::Loader*", "CssLoader")
             .Replace(@"css::ErrorReporter&", "ErrorReporter")
-            .ReReplace(@"(?n)(mozilla::)?(css::)?\b(?<Type>ErrorReporter|nsCSSScanner|nsCSSValue)\b +(?<Var>\w+)\((?<Args>"+sArgs+@")\)", "var ${Var} = new ${Type}(${Args})")
+            .ReReplace(@"(?n)(mozilla::)?(css::)?\b(?<Type>ErrorReporter|nsCSSScanner)\b +(?<Var>\w+)\((?<Args>"+sArgs+@")\)", "var ${Var} = new ${Type}(${Args})")
             .ReReplace(@"nsCSSValue::Array::Create\((\d+)\)", "new nsCSSValue[$1]")
             .ReReplace(@"nsCSSValue::Array", "nsCSSValue[]")
             // specific members access
@@ -147,6 +147,10 @@ namespace Alba.CsCss.Style
             .ReReplace(@"&(aScanner|aReporter|mToken|mData)", "$1")
             .ReReplace(@"\*(aResult|aChanged|aQuery|aHitStop)", "$1")
             .ReReplace(@"mToken.mIdent", "mToken.mIdentStr")
+
+            // specific preprocessor
+            .ReReplace(@"NS_FOR_CSS_SIDES\((?<Var>\w+)\)", "for (Side ${Var} = nsStyle.SIDE_TOP; ${Var} <= nsStyle.SIDE_LEFT; ${Var}++)")
+            .ReReplace(@"\[(side)\]", "[(int)$1]")
 
             // specific enums
             .ReReplace(@"e(CSSSection|CSSFontDesc|CSSProperty|CSSUnit|CSSKeyword|ParseDeclaration|SelectorParsingStatus)_(\w+)", "ns$1.$2")
@@ -173,7 +177,9 @@ namespace Alba.CsCss.Style
                        @"(?<Var>\w+)\((?<Args>"+sArgs+@")\);(?<Code>.*?)\n}\n",
                        m => "using (/*var "+m.Get("Var")+" = */new "+m.Get("Type")+"("+m.Get("Args")+")) {"+m.Get("Code").Indent(2)+"\n  }\n}\n")
             // specific expressions: constructors
-            .ReReplace(@"(?<!new )nsCSSValue\(", "new nsCSSValue(")
+            .ReReplace(@"(?<Type>nsCSSValue|BackgroundParseState) (?<Var>\w+)\((?<Args>"+sArgs+@")\);", "var ${Var} = new ${Type}(${Args});") // Type Var(Args) -> var Var = new Var(Args)
+            .ReReplace(@"(?<Type>nsCSSValue) +(?<Var>\w+)\[(?<Size>\w+)\];", "var ${Var} = new ${Type}[${Size}];") // Type Var[Size] -> var Var = new Type[Size]
+            .ReReplace(@"(?<!new )(?<Type>nsCSSValue)\(", "new ${Type}(") // Type Var[Size] -> Type(...) -> new Type(...)
             // specific expressions: boolean
             .ReReplace(@"!\b(mScanner|mSheetPrincipal|mNameSpaceMap|aResult|mediaFeatureAtom|declaration|mediaType)\b", "$1 == null")
             .ReReplace(@"!(combinator)", "$1 == 0")
@@ -184,9 +190,9 @@ namespace Alba.CsCss.Style
             .ReReplace(@"bool (aAllowExplicitCenter)", "bool $1 = true")
             .ReReplace(@"nsMediaQuery query", "nsMediaQuery query = null")
             .ReReplace(@"string \b(url|urlString);", "string $1 = \"\";")
-            .ReReplace(@"(nsCSSValue) (tmpVal|shapeValue);", "var $2 = new $1();")
             .Replace(@"nsCSSContextType aContext", "nsCSSContextType aContext = nsCSSContextType.General")
             .Replace(@"uint32_t aFlags", "nsParseDeclaration aFlags")
+            .ReReplace(@"nsCSSProperty (subprops|aSourceProperties)", "nsCSSProperty[] $1")
             .Replace(@"string aStopSymbolChars", "char[] aStopSymbolChars")
             .Replace(@"(string aURL)", "(ref string aURL)")
             // specific expressions: arg calls
@@ -219,6 +225,7 @@ namespace Alba.CsCss.Style
             .ReReplace(@"(?<Spec>const) (?<Type>\w+) (?<Var>\w+)\[\]", "${Type}[] ${Var}") // array args
             .ReReplace(@"(?<Type>\w+) (?<Var>a\w+)\[\]", "${Type}[] ${Var}") // array args
             .ReReplace(@"static const", "const")
+            .ReReplace(@"if \((\w+) & (\w+)\)", "if (($1 & $2) != 0)")
             //.ReReplace(@"\) const\n", ")\n") // const functions
             //.ReReplace(@"inline", "")
             //.ReReplace(@"(u?int\d+_t|double|PRUnichar)\((" + sArgs + @")\)", "(($1)($2))") // casts in functional style
