--- a/Alba.CsCss/Style/Original/nsCSSParser.tt
+++ b/Alba.CsCss/Style/Original/nsCSSParser.tt
@@ -31,6 +31,7 @@
 using System;
 using System.Collections.Generic;
 using System.Diagnostics;
+using System.Text;
 using Alba.CsCss.Extensions;
 using Alba.CsCss.Gfx;
 
@@ -62,7 +63,7 @@ namespace Alba.CsCss.Style
             // whitespace
             .ReReplace(@"\r", "")
             .ReReplace(@"\\\n", "")
-            .ReReplace(@"""\s*""", "")
+            .ReReplace(@"""\s*\n\s*""", "")
 
             // specific mozilla
             //.Replace(@"MOZ_LIKELY(ch < 0 || ch == ')')", "ch < 0 || ch == ')'")
@@ -87,13 +88,16 @@ namespace Alba.CsCss.Style
             .ReReplace(@"(\w+).(?:forget|get)\(\)", "$1")
             //.ReReplace(@"(?s)MOZ_(?:UN)?LIKELY\((" + sArgs + @")\)", "$1")
             //.ReReplace(@"(?s)NS_ERROR\((" + sArg + @")\)", "throw new Exception($1)")
-            .ReReplace(@"(?:NS_LITERAL_STRING|NS_ADDREF|getter_Transfers|char)\((.*?)\)", "$1")
+            .ReReplace(@"(?:NS_LITERAL_STRING|NS_ADDREF|getter_Transfers|getter_AddRefs|char)\((.*?)\)", "$1")
             .ReReplace(@"(?:nsRefPtr|nsCOMPtr|nsAutoPtr|already_AddRefed|DebugOnly)<([\w:]+)>", "$1")
             .ReReplace(@"(?:ArrayLength|NS_ARRAY_LENGTH)\(([\w:]+)\)", "$1.Length")
             .ReReplace(@"InfallibleTArray<([\w:]+)>[*&]?", "List<$1>")
             .ReReplace(@"(?n)NS_ConvertASCIItoUTF16 (?<Var>\w+)\((?<Value>"+sArgs+@")\);", "string ${Var} = ${Value};")
             .ReReplace(@"nsContentUtils::ASCIIToLower\((.*)\)", "$1 = $1.ToLower()")
             .ReReplace(@"do_GetAtom", "new nsAtom")
+            .ReReplace(@"NS_(RGBA?)", "nscolor.$1")
+            .ReReplace(@"NS_GET_([RGBA])\((\w+)\)", "$2.$1")
+            .ReReplace(@"NS_(?<Method>HexToRGB|ColorNameToRGB)\((?<Args>"+sArgs+@"), &(?<Result>\w+)\)", "nscolor.${Method}(${Args}, ref ${Result})")
 
             // specific preprocessor
             .ReReplace(@"REPORT_UNEXPECTED\((\w+)\)",
@@ -146,7 +150,7 @@ namespace Alba.CsCss.Style
             .ReReplace(@"&?CSSParserImpl::", "")
             .ReReplace(@"&(aScanner|aReporter|mToken|mData)", "$1")
             .ReReplace(@"\*(aResult|aChanged|aQuery|aHitStop)", "$1")
-            .ReReplace(@"mToken.mIdent", "mToken.mIdentStr")
+            .ReReplace(@"(tk|mToken)(\.|\->)mIdent", "$1.mIdentStr")
 
             // specific preprocessor
             .ReReplace(@"NS_FOR_CSS_SIDES\((?<Var>\w+)\)", "for (Side ${Var} = nsStyle.SIDE_TOP; ${Var} <= nsStyle.SIDE_LEFT; ${Var}++)")
@@ -177,24 +181,31 @@ namespace Alba.CsCss.Style
                        @"(?<Var>\w+)\((?<Args>"+sArgs+@")\);(?<Code>.*?)\n}\n",
                        m => "using (/*var "+m.Get("Var")+" = */new "+m.Get("Type")+"("+m.Get("Args")+")) {"+m.Get("Code").Indent(2)+"\n  }\n}\n")
             // specific expressions: constructors
+            .ReReplace(@"(?<Type>nsCSSFontFaceRule) (?<Var>\w+)\(new \k<Type>\((?<Args>"+sArgs+@")?\)\);", "var ${Var} = new ${Type}(${Args});") // Type Var(new Type()) -> var Var = new Var(Args)
             .ReReplace(@"(?<Type>nsCSSValue|BackgroundParseState) (?<Var>\w+)\((?<Args>"+sArgs+@")\);", "var ${Var} = new ${Type}(${Args});") // Type Var(Args) -> var Var = new Var(Args)
             .ReReplace(@"(?<Type>nsCSSValue) +(?<Var>\w+)\[(?<Size>\w+)\];", "var ${Var} = new ${Type}[${Size}];") // Type Var[Size] -> var Var = new Type[Size]
+            .ReReplace(@"(?<Type>Declaration|string) (?<Var>\w+)\((?<Args>"+sArgs+@")\);", "${Type} ${Var} = ${Args};") // Type Var(Args) -> Type Var = Args
+            .ReReplace(@"(?<Type>List<float>|nscolor) (?<Var>\w+);", "var ${Var} = new ${Type}();") // Type Var -> var Var = new Type()
+            .ReReplace(@"(?<Type>u?int\d+_t) (?<Var>\w+);", "${Type} ${Var} = 0;") // int Var -> int Var = 0
             .ReReplace(@"(?<!new )(?<Type>nsCSSValue)\(", "new ${Type}(") // Type Var[Size] -> Type(...) -> new Type(...)
             // specific expressions: boolean
-            .ReReplace(@"!\b(mScanner|mSheetPrincipal|mNameSpaceMap|aResult|mediaFeatureAtom|declaration|mediaType)\b", "$1 == null")
-            .ReReplace(@"!(combinator)", "$1 == 0")
+            .ReReplace(@"!\b(mScanner|mSheetPrincipal|mNameSpaceMap|aResult|mediaFeatureAtom|declaration|mediaType|prefix)\b", "$1 == null")
+            .ReReplace(@"!(dataMask|combinator)", "$1 == 0")
             .ReReplace(@"if \((mSheet|mChildLoader|mNameSpaceMap|lastRule|declaration|query|kid)\)", "if ($1 != null)")
             .ReReplace(@"if \(!\((mSheet|aSheetPrincipal|aBaseURI|aSheetURI|aNodePrincipal|aDeclaration)\)\)", "if ($1 == null)")
             // specific expressions: arg declarations
-            .ReReplace(@"bool (aInsideBraces|conditionMet|hitStop)", "bool $1 = false")
+            .ReReplace(@"bool (aInsideBraces)", "bool $1 = false")
             .ReReplace(@"bool (aAllowExplicitCenter)", "bool $1 = true")
-            .ReReplace(@"nsMediaQuery query", "nsMediaQuery query = null")
-            .ReReplace(@"string \b(url|urlString);", "string $1 = \"\";")
             .Replace(@"nsCSSContextType aContext", "nsCSSContextType aContext = nsCSSContextType.General")
             .Replace(@"uint32_t aFlags", "nsParseDeclaration aFlags")
             .ReReplace(@"nsCSSProperty (subprops|aSourceProperties)", "nsCSSProperty[] $1")
             .Replace(@"string aStopSymbolChars", "char[] aStopSymbolChars")
             .Replace(@"(string aURL)", "(ref string aURL)")
+            // specific expressions: arg values
+            .ReReplace(@"bool (conditionMet|hitStop);", "bool $1 = false;")
+            .ReReplace(@"nsMediaQuery query;", "nsMediaQuery query = null;")
+            .ReReplace(@"string \b(url|urlString)\b;", "string $1 = \"\";")
+            .ReReplace(@"string condition;", "var condition = new StringBuilder();")
             // specific expressions: arg calls
             .ReReplace(@"&(equal)", "out $1")
             .ReReplace(@"&(hitStop)", "ref $1")
@@ -203,6 +214,7 @@ namespace Alba.CsCss.Style
             .ReReplace(@", query,", ", ref query,")
             .ReReplace(@"(?i)\((\w*conditionMet)", "(ref $1")
             .ReReplace(@"true, aChanged\)", "true, ref aChanged)")
+            .ReReplace(@"ParseColorComponent\((\w), (\w+)", @"ParseColorComponent(ref $1, ref $2")
             .ReReplace(@"ParseSelectorList\(\*aSelectorList, 0\)", @"ParseSelectorList(ref aSelectorList, '\0')")
             .ReReplace(@"\(AppendRuleToSheet, this", "((rule, _) => AppendRule(rule), this")
             .ReReplace(@"(?<Method>\w+)\(AssignRuleToPointer, (?<Args>[^\)]+)\);", "Rule result = null; ${Method}((rule, _) => result = rule, ${Args}); aResult = result;")
@@ -226,6 +238,7 @@ namespace Alba.CsCss.Style
             .ReReplace(@"(?<Type>\w+) (?<Var>a\w+)\[\]", "${Type}[] ${Var}") // array args
             .ReReplace(@"static const", "const")
             .ReReplace(@"if \((\w+) & (\w+)\)", "if (($1 & $2) != 0)")
+            .ReReplace(@"// fall through(?<Space>\s+)(?<Case>default|case .*):", "goto ${Case};${Space}${Case}:")
             //.ReReplace(@"\) const\n", ")\n") // const functions
             //.ReReplace(@"inline", "")
             //.ReReplace(@"(u?int\d+_t|double|PRUnichar)\((" + sArgs + @")\)", "(($1)($2))") // casts in functional style
@@ -234,7 +247,7 @@ namespace Alba.CsCss.Style
             .ReReplace(@"::", ".")
 
             // common preprocessor
-            .ReReplace(@"#(include|define|undef) .*", "")
+            .ReReplace(@"#(include|define|undef|pragma) .*", "")
             .ReReplace(@"#ifdef (\w+)", "#if $1")
             .ReReplace(@"\n *delete .*;\n", "\n")
             //.ReReplace(@"using .*", "")
