--- a/Alba.CsCss/Style/Original/nsCSSParser.tt
+++ b/Alba.CsCss/Style/Original/nsCSSParser.tt
@@ -36,9 +36,10 @@ using Alba.CsCss.Extensions;
 using Alba.CsCss.Gfx;
 
 using int32_t = System.Int32;
-using uint8_t = System.SByte;
-using uint16_t = System.Int16;
-using uint32_t = System.Int32;
+using uint8_t = System.SByte;  // O RLY?
+using uint16_t = System.Int16; // O RLY?
+using uint32_t = System.Int32; // O RLY?
+using size_t = System.Int32;   // O RLY?
 using nsresult = System.UInt32; // TODO
 
 namespace Alba.CsCss.Style
@@ -116,7 +117,11 @@ namespace Alba.CsCss.Style
                         "mReporter.OutputError()")
             .ReReplace(@"CLEAR_ERROR\(\)",
                         "mReporter.ClearError()")
-            // specific methods removal
+            .ReReplace(@"NS_FOR_CSS_SIDES ?\((?<Var>\w+)\)", "for (Side ${Var} = nsStyle.SIDE_TOP; ${Var} <= nsStyle.SIDE_LEFT; ${Var}++)")
+            .ReReplace(@"\[(side|index)\]", "[(int)$1]")
+            .ReReplace(@"{ STR_WITH_LEN\((""\w+"")\), (\w+), (\w+) }", "new UnitInfo { name = $1, unit = $2, type = $3 }")
+            // specific code removal
+            .ReReplace(@"(?s)struct UnitInfo {.*?\n};\n", "")
             //.ReReplace(@"(?s)nsCSSScanner::nsCSSScanner\(StringBuilder aBuffer, uint32_t aLineNumber\).*?\n}\n", "")
             //.ReReplace(@"(?s)nsCSSScanner::~nsCSSScanner\(\).*?\n}\n", "")
             //.ReReplace(@"(?s)void\s+nsCSSScanner::StopRecording\(StringBuilder aBuffer\).*?\n}\n", "")
@@ -134,7 +139,7 @@ namespace Alba.CsCss.Style
                             "nsCSSValueGradientStop|nsCSSTokenType"+
                        @")\b(?<Space> )?[*&]?", "${Name}${Space}")
             .ReReplace(@"(?n)\b(?<Name>"+
-                            "u?int\\d+_t|bool|Rule|StyleRule|Declaration|nsCSSSelectorList|nsMediaQuery|nsCSSValuePair|nscolor"+
+                            "u?int\\d+_t|bool|float|Rule|StyleRule|Declaration|nsCSSSelectorList|nsMediaQuery|nsCSSValuePair|nscolor"+
                        @")\b(?<Space> )?[*&]", "ref ${Name}${Space}")
             .ReReplace(@"nsIURI\*?", "Uri")
             .ReReplace(@"(const )?\b(nsString|nsAString|nsSubstring|nsAutoString)\b[*&]?", "string")
@@ -151,10 +156,6 @@ namespace Alba.CsCss.Style
             .ReReplace(@"&(aScanner|aReporter|mToken|mData)", "$1")
             .ReReplace(@"\*(aResult|aChanged|aQuery|aHitStop)", "$1")
             .ReReplace(@"(tk|mToken)(\.|\->)mIdent", "$1.mIdentStr")
-
-            // specific preprocessor
-            .ReReplace(@"NS_FOR_CSS_SIDES\((?<Var>\w+)\)", "for (Side ${Var} = nsStyle.SIDE_TOP; ${Var} <= nsStyle.SIDE_LEFT; ${Var}++)")
-            .ReReplace(@"\[(side)\]", "[(int)$1]")
 
             // specific enums
             .ReReplace(@"e(CSSSection|CSSFontDesc|CSSProperty|CSSUnit|CSSKeyword|ParseDeclaration|SelectorParsingStatus)_(\w+)", "ns$1.$2")
@@ -176,6 +177,7 @@ namespace Alba.CsCss.Style
             .Replace(@"(*aAppendFunc)(", "aAppendFunc(")
             .Replace(@"bool (*parseFunc)(RuleAppendFunc, void*)", "Func<RuleAppendFunc, object, bool> parseFunc")
             .Replace(@"(this->*parseFunc)", "parseFunc")
+            .Replace(@"const UnitInfo", "static UnitInfo")
             .ReReplace(@"mToken\.mIdentStr \+ (\d+)", "mToken.mIdentStr.Substring($1)")
             .ReReplace(@"(?ns)(?<Type>nsAutoParseCompoundProperty|nsAutoFailingSupportsRule|nsAutoSuppressErrors) "+ // RAII structs
                        @"(?<Var>\w+)\((?<Args>"+sArgs+@")\);(?<Code>.*?)\n}\n",
@@ -183,10 +185,10 @@ namespace Alba.CsCss.Style
             // specific expressions: constructors
             .ReReplace(@"(?<Type>nsCSSFontFaceRule) (?<Var>\w+)\(new \k<Type>\((?<Args>"+sArgs+@")?\)\);", "var ${Var} = new ${Type}(${Args});") // Type Var(new Type()) -> var Var = new Var(Args)
             .ReReplace(@"(?<Type>nsCSSValue|BackgroundParseState) (?<Var>\w+)\((?<Args>"+sArgs+@")\);", "var ${Var} = new ${Type}(${Args});") // Type Var(Args) -> var Var = new Var(Args)
-            .ReReplace(@"(?<Type>nsCSSValue) +(?<Var>\w+)\[(?<Size>\w+)\];", "var ${Var} = new ${Type}[${Size}];") // Type Var[Size] -> var Var = new Type[Size]
+            .ReReplace(@"(?<Type>nsCSSValue|nsCSSValueList|bool) +(?<Var>\w+)\[(?<Size>\w+)\];", "var ${Var} = new ${Type}[${Size}];") // Type Var[Size] -> var Var = new Type[Size]
             .ReReplace(@"(?<Type>Declaration|string) (?<Var>\w+)\((?<Args>"+sArgs+@")\);", "${Type} ${Var} = ${Args};") // Type Var(Args) -> Type Var = Args
-            .ReReplace(@"(?<Type>List<float>|nscolor) (?<Var>\w+);", "var ${Var} = new ${Type}();") // Type Var -> var Var = new Type()
-            .ReReplace(@"(?<Type>u?int\d+_t) (?<Var>\w+);", "${Type} ${Var} = 0;") // int Var -> int Var = 0
+            .ReReplace(@"(?<Type>nsCSSValuePair|List<float>|nscolor) (?<Var>\w+);", "var ${Var} = new ${Type}();") // Type Var -> var Var = new Type()
+            .ReReplace(@"(?<Type>nsCSSUnit|u?int\d+_t) (?<Var>\w+);", "${Type} ${Var} = 0;") // int Var -> int Var = 0
             .ReReplace(@"(?<!new )(?<Type>nsCSSValue)\(", "new ${Type}(") // Type Var[Size] -> Type(...) -> new Type(...)
             // specific expressions: boolean
             .ReReplace(@"!\b(mScanner|mSheetPrincipal|mNameSpaceMap|aResult|mediaFeatureAtom|declaration|mediaType|prefix)\b", "$1 == null")
@@ -198,7 +200,7 @@ namespace Alba.CsCss.Style
             .ReReplace(@"bool (aAllowExplicitCenter)", "bool $1 = true")
             .Replace(@"nsCSSContextType aContext", "nsCSSContextType aContext = nsCSSContextType.General")
             .Replace(@"uint32_t aFlags", "nsParseDeclaration aFlags")
-            .ReReplace(@"nsCSSProperty (subprops|aSourceProperties)", "nsCSSProperty[] $1")
+            .ReReplace(@"\b(nsCSSProperty|nsCSSValue)\b \b(subprops|aSourceProperties|aProperties|aValues)\b(?!\[\])", "$1[] $2")
             .Replace(@"string aStopSymbolChars", "char[] aStopSymbolChars")
             .Replace(@"(string aURL)", "(ref string aURL)")
             // specific expressions: arg values
@@ -209,11 +211,12 @@ namespace Alba.CsCss.Style
             // specific expressions: arg calls
             .ReReplace(@"&(equal)", "out $1")
             .ReReplace(@"&(hitStop)", "ref $1")
-            .ReReplace(@"(lastRule)\)", "ref $1)")
+            .ReReplace(@"(lastRule|junk)\)", "ref $1)")
             .ReReplace(@"(ParseURLOrString)\((\w+)\)", "$1(ref $2)")
             .ReReplace(@", query,", ", ref query,")
             .ReReplace(@"(?i)\((\w*conditionMet)", "(ref $1")
             .ReReplace(@"true, aChanged\)", "true, ref aChanged)")
+            .ReReplace(@"(ParseBoxPositionValues|ParseTransitionTimingFunctionValueComponent)\((\w+),", @"$1(ref $2,")
             .ReReplace(@"ParseColorComponent\((\w), (\w+)", @"ParseColorComponent(ref $1, ref $2")
             .ReReplace(@"ParseSelectorList\(\*aSelectorList, 0\)", @"ParseSelectorList(ref aSelectorList, '\0')")
             .ReReplace(@"\(AppendRuleToSheet, this", "((rule, _) => AppendRule(rule), this")
